--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "server": "npm run start --prefix api",
     "client": "npm run start --prefix client",
     "rtmp": "npm run start --prefix rtmpServer",
-    "start": "concurrently  \"npm run server\" \"npm run client\" \"npm run rtmp\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client &&  npm install --prefix server && npm install --prefix  rtmp && npm run start  "
+    "dev": "concurrently  \"npm run server\" \"npm run client\" \"npm run rtmp\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client &&  npm install --prefix server && npm install --prefix  rtmp && npm run dev"
   },
   "repository": {
     "type": "git",
